--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body><h1>web stastique</h1>
     <p>
         Un site Web statique utilise le rendu côté serveur pour fournir des fichiers HTLM, CSS et Javscript
-        prédéfinis à un naviguateur Web Contrairement aux sites dynamiques traditionnelles qui fonctionnent en affichant 
+        prédéfinis à un naviguateur Web Contraiffrement aux sites dynamiques traditionnelles qui fonctionnent en affichant 
         la page web au moment de la demmande. Les sites Web statiques contiennent un nombre fixe de pages et le format de page Web est fixe et fournit des informations au client.
          Le contenu d'une page Web est modifié pendant l'exécution de page sur le navigateur du client.
     </p>
